# dotfiles

./: .Xmodmap  .Xresources  .bashrc  .gitignore  .stow-local-ignore  .xinitrc  .zlogin  .zprofile  .zshrc  README.md  wslg_fix.sh
.config/alacritty/: alacritty.toml  alacritty.yml
.config/eww/: eww.scss  eww.yuck  eww.yuck.bak
.config/eww/scripts/: CMakeLists.txt  Makefile  battery_info.sh  get_eww_main_monitor.sh  hyprland-workspaces.py  lock.sh  low_battery_notify.sh  monitors.py  music_info.sh  powerbutton.sh  restart_eww.sh  sound.sh  tuned_info.sh  wifi.sh
.config/eww/scripts/include/: formatNumberConfig.h  format_number.h
.config/eww/scripts/src/: CMakeLists.txt
.config/eww/scripts/src/format_number/: CMakeLists.txt  formatNumberConfig.h.in  format_number.cpp  format_number.h  format_number_main.cpp
.config/eww/scripts/src/memory_json/: CMakeLists.txt  memoryJsonConfig.h.in  memory_json.cpp
.config/foot/: foot.ini
.config/gtk-3.0/: settings.ini
.config/hypr/: hypridle.conf  hyprland.conf  hyprland_desktop.sh  hyprland_laptop.sh  hyprland_laptop_ucsb.sh  hyprlock.conf  hyprpaper.conf  layouts.yaml  monitor-setup.py  monitors.yaml  start.sh
.config/hypr/backup/: hyprland_desktop.sh  hyprland_laptop_thinkvision.sh  hyprland_laptop_ucsb.sh
.config/hypr/garden/: theme.conf
.config/hypr/themes/garden/: theme.conf
.config/hypr/themes/garden/eww/: launch_bar
.config/hypr/themes/garden/eww/scripts/: appname  music  music_info  pop  workspace  workspace_bak
.config/i3/: config  config.bak  i3status.conf
.config/i3blocks/: config
.config/i3blocks/scripts/: bandwidth2  battery2  cpu_usage2  memory2  volume-pipewire
.config/kitty/: kitty.conf
.config/mako/: config
.config/picom/: picomo.conf
.config/polybar/: better_xwindow.sh  config.ini  launch.sh
.config/scripts/: lock.sh
.config/sway/: config
.config/tmux/: tmux.conf
.config/waybar/: config  style.css
.config/wofi/: style.css
.local/share/: BreezeX-RosePine-Linux  BreezeX-RosePineDawn-Linux  Gruvbox-Plus-Dark  icon-theme.cache
.local/share/applications/: obsidian.desktop  stayfree.desktop
.oh-my-zsh/custom/: aliases.zsh
.scripts/: monitor-scaling.sh  sunshine_do.sh  sunshine_undo.sh
.themes/Tokyonight-Dark/gnome-shell/: gnome-shell.css
.themes/Tokyonight-Light/gnome-shell/: gnome-shell.css
.themes/Tokyonight-Light/gtk-3.0/: gtk-dark.css  gtk.css
.themes/Tokyonight-Light/gtk-4.0/: gtk.css
nvidia/: .gitignore  README.md
